# helloworld-service

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cc-helloworld.yaml
.github/workflows/: CI.yml
resources/supervisor/: cosmian_helloworld.ini
src/: main.rs
